# drbang

./: Makefile.am  README.md  configure.ac
src/: Makefile.am  dbn-test.c  maths.c  maths.h  nifty.h  rand-test.c  rand.c  rbm.c  rbm.ggo  version.c.in  version.h
test/: Makefile.am
